Basic GStreamer integration for media playback (WiP)

--- a/components/script/Cargo.toml
+++ b/components/script/Cargo.toml
@@ -70,6 +70,7 @@ offscreen_gl_context = { version = "0.14", features = ["serde"] }
 open = "1.1.1"
 parking_lot = "0.4"
 phf = "0.7.18"
+playground = {path = "../playground"}
 profile_traits = {path = "../profile_traits"}
 ref_filter_map = "1.0.1"
 ref_slice = "1.0"
